# pyai-tpl

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: codeql.yml  lint.yml  tests.yml
src/trajnor/: __init__.py  repl.py
tests/: __init__.py  test_repl.py
